[package]
name = "lair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.19"

toml = "0.5.8"
serde = { version = "1.0.132", features = ["derive"]}
anyhow = "1.0.51"
itertools = "0.10.3"
structopt = "0.3.25"
git2 = "0.13.25"
maplit = "1.0.2"
reqwest = { version = "0.11.7", features = ["blocking"] }
either = "1.6.1"
thiserror = "1.0.30"
