[package]
name = "lair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3.19"

# Serialization
toml = "0.5.8"
serde = { version = "1.0.132", features = ["derive"] }

# Git
git2 = "0.13.25"

# Common convenience crates
either = "1.6.1"
maplit = "1.0.2"
itertools = "0.10.3"
thiserror = "1.0.30" # error handling
anyhow = "1.0.51" # error handling

# Command Line / Terminal UI packages
structopt = "0.3.25"
# tui = "0.16.0"
# termion = "1.5"
# indicatif = "0.16.2"

